# Multichannel-Realtime-Spectrum-Analyzer

./: .gitignore  Cargo.toml  README.md  build.rs  build_and_run.sh  presets.yaml  settings.json
.cargo/: config.toml
src/: audio_stream.rs  conversion.rs  convert.rs  display.rs  fft_analysis.rs  get_results.rs  main.rs  make_waves.rs  pitch_detection.rs  plot.rs  plotmain.rs  presets.rs  resynth.rs  spectrum.rs  utils.rs
