[package]
name = "audio_streaming"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rustfft = "6.0"
egui = "0.22"
eframe = "0.22"
chrono = "0.4"
num-traits = "0.2"
anyhow = "1.0.70"
epi = "0.17"
log = "0.4"
env_logger = "0.10"
nom = "7.1.3"
memchr = "2.5.0"
rfd = "0.9"
winapi = { version = "0.3.9", features = ["windef", "winuser"] }
portaudio = "0.8"
ctrlc = "3.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
pitch-detector = "0.3.1"

[package.metadata.rust-version]
version = "1.65.0"

[package.metadata.docs.rs]
all-features = true

[workspace.metadata.resolver]
version = "2"

[workspace.dependencies]
bitflags = "1.3.2"

[env]
PA_USE_JACK = "0"
